--- a/calculadora/style.css
+++ b/calculadora/style.css
@@ -31,8 +31,8 @@ body {
     padding: 10px;
     margin: 10px 0;
     font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: 1px solid #0a0707;
+    border-radius: 0px;
 }
 
 .botoes button {
@@ -43,8 +43,9 @@ body {
     background-color: rgb(129, 5, 187);
     color: azure;
     border: none;
-    border-radius: 5px;
+    border-radius: 50px;
 }
+
 
 
 
