Arquivo Projeto Suco

--- a/Projeto Suco/style.css
+++ b/Projeto Suco/style.css
@@ -64,3 +64,17 @@
 #proximo{
     right: 30px;
 }
+
+@keyframes mexer{
+    from{
+        top: 100%;
+        opacity: 0;
+    }
+}
+
+.item.ativo img.fruta{
+    animation:mexer 0.5s ease-in-out 1;
+}
+.titulo{
+    animation: mexer 0.5s ease-out 1;
+}
